--- a/save space/index.html
+++ b/save space/index.html
@@ -109,6 +109,7 @@ function preload() {
 
 	game.load.audio('welcome', 'assets/audio/welcome.mp3');
 	game.load.audio('intro1', 'assets/audio/intro1.mp3');
+	game.load.audio('end', 'assets/audio/end.mp3');
 }
 
 function create() {
@@ -158,7 +159,7 @@ function titleToPlayTransition() {
 function createPlayScene() {
 	play_back = game.add.image(0, 0, 'play_back');
 	//play_window = game.add.image(20, 0, 'play_window');
-
+	buildingsGroup = game.add.group();
 	play_graphics = game.add.graphics(0, 0);
 
 	//
@@ -209,6 +210,7 @@ function build(){
 			buildings[i] = game.add.sprite((buildingsJson.Buildings[i].Building.x)*1.92+200, ((buildingsJson.Buildings[i].Building.y)*1.35)+550, "building"+(i+1));
 			buildings[i].anchor.setTo(0.5,1);
 			buildings[i].angle = buildingsJson.Buildings[i].Building.angle;
+			buildingsGroup.add(buildings[i]);
 		}
   }
 	if (typeof(fusee) == "undefined"){
@@ -255,12 +257,31 @@ function intro2ToLesson1Transition() {
 	game.time.events.add(500, createEvent, this);
 }
 
+function lesson2Transition() {
+	TVFromCornerToCenter();
+	
+	game.time.events.add(500, lesson2End, this);
+}
+
+function lesson2End() {
+	TVFromCenterToCorner();
+	playRandomVideo();
+}
+
 function TVFromCenterToCorner() {
 	game.add.tween(tv).to( { x: 1640, y: 100 }, 500, Phaser.Easing.Default, true);
 	game.add.tween(tv).to( { width: 1000/2, height: 1050/2 }, 500, Phaser.Easing.Default, true);
 
 	game.add.tween(videoSprite).to( { x: 1640, y: 180 }, 500, Phaser.Easing.Default, true);
 	game.add.tween(videoSprite).to( { width: 408, height: 230 }, 500, Phaser.Easing.Default, true);
+}
+
+function TVFromCornerToCenter() {
+	game.add.tween(tv).to( { x: 960, y: 340 }, 500, Phaser.Easing.Default, true);
+	game.add.tween(tv).to( { width: 1000, height: 1050 }, 500, Phaser.Easing.Default, true);
+
+	game.add.tween(videoSprite).to( { x: 960, y: 500 }, 500, Phaser.Easing.Default, true);
+	game.add.tween(videoSprite).to( { width: 816, height: 459 }, 500, Phaser.Easing.Default, true);
 }
 
 function createTVCenter() {
@@ -362,6 +383,9 @@ function createEvent() {
 		case "quizz":
 			createQuizz();
 			break;
+		case "end":
+			endGame();
+			break;
 	}
 }
 
@@ -393,6 +417,15 @@ function createQuizz() {
 	writeQuizzAnswers();
 }
 
+function endGame() {
+	destroyTempGraphics();
+
+	TVFromCornerToCenter();
+	
+	end = game.add.audio('end');
+	end.play();
+}
+
 function createLessonImage() {
 	lessonImage = game.add.image(lesson[pageID][paragraphID].picture_x, lesson[pageID][paragraphID].picture_y, lesson[pageID][paragraphID].picture);
 	lessonImage.scale.setTo(.5, .5);
@@ -406,8 +439,8 @@ function destroyLessonImage() {
 
 function next() {
 	destroyArrows();
-	eventID = structure[eventID].next;
 	console.log(structure[eventID].next);
+	eventID = structure[eventID].next;
 	createEvent();
 }
 
@@ -455,12 +488,16 @@ function dummy() {
 
 function checkAnswer(playerChoice) {
 	if (quizz[pageID].answer == playerChoice) {
-		console.log("bjbj");
+		console.log("yep");
+		buildingsJson.Buildings[pageID+1].Building.showable = true;
+		build();
 		next();
 	}
 	else {
 		console.log("nope");
+		next();
 	}
+	playerChoice == null;
 }
 
 function writeText() {
